<resources>
    <string name="app_name">IRASYAFIRAHFAUZIAH_1202150251_MODUL1</string>
    <string name="makan_malam">Makan Malam</string>
    <string name="menu">Menu</string>
    <string name="nasi_uduk">Nasi Uduk</string>
    <string name="porsi">Porsi</string>
    <string name="harga">Harga</string>
    <string name="makan_malam2">Makan Malam</string>
    <string name="dengan_milea">Dengan Milea</string>
    <string name="abnormal">Abnormal</string>
    <string name="eatbus">Eatbus</string>
</resources>
