<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.IRASYAFIRAHFAUZIAH_1202150251_MODUL1.SecondActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:text="@string/makan_malam"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="21dp"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="395dp"
        android:layout_height="34dp"
        android:layout_marginBottom="21dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/nasi_uduk"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/porsi"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="403dp"
        android:layout_height="41dp"
        android:layout_marginBottom="26dp"
        android:textAlignment="center"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="412dp"
        android:layout_height="48dp"
        android:layout_marginBottom="33dp"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="367dp"
        android:text="@string/harga" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:textAlignment="center"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="429dp" />

</LinearLayout>
