<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.IRASYAFIRAHFAUZIAH_1202150251_MODUL1.MainActivity"
    android:orientation="vertical">

    <TextView        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/makan_malam2"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/dengan_milea"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="55dp" />

    <EditText
        android:id="@+id/editTextNasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="179dp" />

    <EditText
        android:id="@+id/editTextJmlh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="253dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:onClick="abnormal"
            android:text="@string/abnormal"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="334dp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:onClick="eatbus"
            android:text="@string/eatbus"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="334dp" />
    </LinearLayout>

</LinearLayout>
